cleaning up notebook

--- a/Model-LinearRegression.ipynb
+++ b/Model-LinearRegression.ipynb
@@ -524,8 +524,8 @@
     }
    ],
    "source": [
-    "df_total_medal_count = pd.DataFrame(train_data)\n",
-    "df_total_medal_count.describe().columns"
+    "train_data = pd.DataFrame(train_data)\n",
+    "train_data.describe().columns"
    ]
   },
   {
@@ -534,20 +534,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign X (data) and y (target)\n",
-    "y = train_data[\"Total_Medals\"]\n",
-    "features = [\"Year\", \"Country\", \"Athletes\", \"Event\",\"Sport\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split into Training and Testing data\n",
-    "X = pd.get_dummies(train_data[features])\n",
-    "X_test = pd.get_dummies(test_data[features])"
+    "# Assign X and y for test and training data\n",
+    "y_train = train_data[\"Total_Medals\"]\n",
+    "X_train_features = train_data[[\"Year\", \"Athletes\", \"Event\",\"Sport\"]]\n",
+    "X_train = X_train_features.values\n",
+    "\n",
+    "\n",
+    "X_test_features = test_data[[\"Year\", \"Athletes\", \"Event\",\"Sport\"]]\n",
+    "X_test = X_test_features.values\n"
    ]
   },
   {
@@ -578,7 +572,7 @@
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "model = LinearRegression()\n",
-    "model.fit(X, y)"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -595,7 +589,7 @@
     }
    ],
    "source": [
-    "print(f\"Training Data Score: {model.score(X, y)}\")\n"
+    "print(f\"Training Data Score: {model.score(X_train, y_train)}\")\n"
    ]
   },
   {
