--- a/Model-LinearRegression.ipynb
+++ b/Model-LinearRegression.ipynb
@@ -836,7 +836,7 @@
     "Note: Without GridSearchCV \n",
     "\n",
     "\n",
-    "Actual medal count for 1988: 94\n",
+    "Actual medal count for 1988: 94,\n",
     "Error: 34"
    ]
   },
