prepping for OLS h-tuning

--- a/Model-LinearRegression.ipynb
+++ b/Model-LinearRegression.ipynb
@@ -664,7 +664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameter Tuning - GridSearchCV"
+    "# Hyperparameter Tuning - Ordinary Least Square"
    ]
   },
   {
@@ -673,31 +673,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # https://towardsdatascience.com/hyperparameter-tuning-c5619e7e6624\n",
-    "\n",
-    "\n",
-    "# from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "# param_grid = {\n",
-    "#     'C': [[1, 5, 10, 50]]}\n",
-    "\n",
-    "# grid = GridSearchCV(model, param_grid = param_grid, verbose=3, n_jobs=-1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Fit the model\n",
-    "# grid.fit(X, y)\n",
-    "\n",
-    "\n",
-    "# # List the best parameters for this dataset\n",
-    "# # List the best score\n",
-    "\n",
-    "# print(grid.best_params_)\n",
-    "# print('Best Grid score: %.3f' % grid.best_score_)\n",
-    "\n",
-    "\n",
-    "# # Make predictions with the hypertuned model\n",
-    "# predictions = grid.predict(X_test)\n"
+    "# Source LInk: https://www.knowledgehut.com/blog/data-science/linear-regression-for-machine-learning"
    ]
   },
   {
@@ -706,6 +682,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions with the hypertuned model\n",
+    "predictions = grid.predict(X_test)\n"
+   ]
   },
   {
    "cell_type": "markdown",
