--- a/Model-LinearRegression.ipynb
+++ b/Model-LinearRegression.ipynb
@@ -673,7 +673,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Source LInk: https://www.knowledgehut.com/blog/data-science/linear-regression-for-machine-learning"
+    "# Source LInk: https://www.knowledgehut.com/blog/data-science/linear-regression-for-machine-learning\n",
+    "\n",
+    "\n",
+    "# # Make predictions with the hypertuned model\n",
+    "# predictions = grid.predict(X_test)"
    ]
   },
   {
@@ -689,8 +693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions with the hypertuned model\n",
-    "predictions = grid.predict(X_test)\n"
+    "\n"
    ]
   },
   {
