h-tuning with Gradient Descent

--- a/Model-LinearRegression.ipynb
+++ b/Model-LinearRegression.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -586,13 +586,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = pd.DataFrame(train_data)\n",
+    "#  View what columns actually exist\n",
     "train_data.describe().columns"
    ]
   },
@@ -664,7 +664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameter Tuning - Ordinary Least Square"
+    "# Hyperparameter Tuning - Gradient Descent"
    ]
   },
   {
@@ -673,7 +673,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Source LInk: https://www.knowledgehut.com/blog/data-science/linear-regression-for-machine-learning\n",
+    "# Source Link: https://towardsdatascience.com/https-medium-com-chayankathuria-optimization-ordinary-least-squares-gradient-descent-from-scratch-8b48151ba756\n",
     "\n",
     "\n",
     "# # Make predictions with the hypertuned model\n",
