--- a/Model-LinearRegression.ipynb
+++ b/Model-LinearRegression.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
     }
    ],
    "source": [
-    " # Create a LinearRegression model and fit it to the scaled training data\n",
+    " # Create a LinearRegression model and fit it to the training data\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "model = LinearRegression()\n",
@@ -664,7 +664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameter Tuning - Gradient Descent"
+    "# Hyperparameter Tuning - Ordinary Least Squares"
    ]
   },
   {
@@ -673,11 +673,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Source Link: https://towardsdatascience.com/https-medium-com-chayankathuria-optimization-ordinary-least-squares-gradient-descent-from-scratch-8b48151ba756\n",
+    "# Source Link: https://heartbeat.fritz.ai/implementing-ordinary-least-squares-ols-using-statsmodels-in-python-b1f4dee09419\n",
     "\n",
     "\n",
-    "# # Make predictions with the hypertuned model\n",
-    "# predictions = grid.predict(X_test)"
+    "import statsmodels.api as sm\n",
+    "import numpy as np\n",
+    "\n",
+    "ols = sm.OLS(y_train, X_train_features).fit()\n",
+    "model_prediction = ols.predict(X_train_features) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                 OLS Regression Results                                \n",
+      "=======================================================================================\n",
+      "Dep. Variable:           Total_Medals   R-squared (uncentered):                   0.955\n",
+      "Model:                            OLS   Adj. R-squared (uncentered):              0.941\n",
+      "Method:                 Least Squares   F-statistic:                              68.40\n",
+      "Date:                Thu, 30 Jul 2020   Prob (F-statistic):                    3.17e-10\n",
+      "Time:                        00:31:59   Log-Likelihood:                         -93.152\n",
+      "No. Observations:                  21   AIC:                                      196.3\n",
+      "Df Residuals:                      16   BIC:                                      201.5\n",
+      "Df Model:                           5                                                  \n",
+      "Covariance Type:            nonrobust                                                  \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Year           0.0099      0.010      0.976      0.343      -0.012       0.031\n",
+      "Athletes       0.2375      0.142      1.676      0.113      -0.063       0.538\n",
+      "Event         -0.2371      0.243     -0.974      0.344      -0.753       0.279\n",
+      "Sport          1.1229      3.270      0.343      0.736      -5.809       8.055\n",
+      "Host          43.3374     27.926      1.552      0.140     -15.862     102.537\n",
+      "==============================================================================\n",
+      "Omnibus:                        6.586   Durbin-Watson:                   1.052\n",
+      "Prob(Omnibus):                  0.037   Jarque-Bera (JB):                4.407\n",
+      "Skew:                          -0.740   Prob(JB):                        0.110\n",
+      "Kurtosis:                       4.686   Cond. No.                     1.08e+04\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.08e+04. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_details = ols.summary()\n",
+    "print(model_details)"
    ]
   },
   {
@@ -688,15 +738,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -705,17 +746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions with model\n",
-    "predictions = model.predict(X_test)"
+    "# # Make predictions with model\n",
+    "# predictions = model.predict(X_test)\n",
+    "\n",
+    "# Make predictions with the hypertuned model\n",
+    "predictions = ols.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -747,47 +791,47 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>1988</td>\n",
-       "      <td>128.197370</td>\n",
+       "      <td>120.593333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>1992</td>\n",
-       "      <td>142.157358</td>\n",
+       "      <td>121.763391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>1996</td>\n",
-       "      <td>205.105588</td>\n",
+       "      <td>189.418482</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>2000</td>\n",
-       "      <td>147.775964</td>\n",
+       "      <td>130.919145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>2004</td>\n",
-       "      <td>121.675654</td>\n",
+       "      <td>120.977472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>2008</td>\n",
-       "      <td>124.026568</td>\n",
+       "      <td>134.255859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
        "      <td>2012</td>\n",
-       "      <td>96.205028</td>\n",
+       "      <td>122.240303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
        "      <td>2016</td>\n",
-       "      <td>89.352929</td>\n",
+       "      <td>130.701495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
        "      <td>2020</td>\n",
-       "      <td>-220.352862</td>\n",
+       "      <td>19.945258</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -795,18 +839,18 @@
       ],
       "text/plain": [
        "   Year  Total_Medals\n",
-       "0  1988    128.197370\n",
-       "1  1992    142.157358\n",
-       "2  1996    205.105588\n",
-       "3  2000    147.775964\n",
-       "4  2004    121.675654\n",
-       "5  2008    124.026568\n",
-       "6  2012     96.205028\n",
-       "7  2016     89.352929\n",
-       "8  2020   -220.352862"
+       "0  1988    120.593333\n",
+       "1  1992    121.763391\n",
+       "2  1996    189.418482\n",
+       "3  2000    130.919145\n",
+       "4  2004    120.977472\n",
+       "5  2008    134.255859\n",
+       "6  2012    122.240303\n",
+       "7  2016    130.701495\n",
+       "8  2020     19.945258"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +870,7 @@
     "\n",
     "\n",
     "Actual medal count for 1988: 94,\n",
-    "Error: 34"
+    "Error: 26"
    ]
   },
   {
