updating linear notebook notes

--- a/Model-LinearRegression.ipynb
+++ b/Model-LinearRegression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: Machine Learning - Linear Regression - Currently Training for 1988 Medal Count"
+    "Note: Machine Learning - Linear Regression - Currently Training for Gold, Silver, Bronze medal counts"
    ]
   },
   {
