try model on different datasets

--- a/olympic medalists.ipynb
+++ b/olympic medalists.ipynb
@@ -730,7 +730,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -952,6 +954,291 @@
    "source": [
     "summer_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Gymnastics Female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10696, 3)\n",
+      "(10696,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Gymnastics_F = summer_data[(summer_data[\"Sport\"] == \"Gymnastics\") & (summer_data[\"Sex\"] == \"F\")]\n",
+    "Gymnastics_F = Gymnastics_F[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
+    "Gymnastics_F = Gymnastics_F.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "Gymnastics_F = Gymnastics_F.replace(\"Gold\", 1)\n",
+    "Gymnastics_F = Gymnastics_F.replace(\"Silver\", 1)\n",
+    "Gymnastics_F = Gymnastics_F.replace(\"Bronze\", 1)\n",
+    "Gymnastics_F[\"Medal\"] = Gymnastics_F[\"Medal\"].fillna(0)\n",
+    "Gymnastics_F = Gymnastics_F.dropna()\n",
+    "Gymnastics_F[\"Medal\"].unique()\n",
+    "X1 = Gymnastics_F[['Height', \"Weight\", \"Age\"]] \n",
+    "print(X.shape) \n",
+    "y1 = Gymnastics_F['Medal'] \n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 0.9295898609399753\n",
+      "Testing Data Score: 0.9429778247096093\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7027</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3723</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4036</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4115</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2274</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6181</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>931</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2359</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>691</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>533</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1894 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Prediction  Actual\n",
+       "7027         0.0     0.0\n",
+       "3723         0.0     0.0\n",
+       "4036         0.0     0.0\n",
+       "4115         0.0     0.0\n",
+       "2274         0.0     0.0\n",
+       "...          ...     ...\n",
+       "6181         0.0     0.0\n",
+       "931          0.0     0.0\n",
+       "2359         0.0     0.0\n",
+       "691          0.0     0.0\n",
+       "533          0.0     0.0\n",
+       "\n",
+       "[1894 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
+    "from sklearn.linear_model import LogisticRegression \n",
+    "classifier = LogisticRegression() \n",
+    "classifier\n",
+    "\n",
+    "classifier.fit(X1_train, y1_train)\n",
+    "\n",
+    "print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
+    "print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
+    "\n",
+    "predictions = classifier.predict(X1_test)\n",
+    "\n",
+    "pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Basketball M a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1521,6 +1808,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LogisticRegression"
    ]
   },
   {
