add model for loop

--- a/olympic medalists.ipynb
+++ b/olympic medalists.ipynb
@@ -742,7 +742,7 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1085,6 +1085,422 @@
     "        print(\"An exception occurred\")\n",
     "        print(\"----------------------------------------------------\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2463</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2464</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2465</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2466</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2467</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2461 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Age  Height  Weight  Medal\n",
+       "0     24.0   180.0    80.0    0.0\n",
+       "1     29.0   195.0    85.0    0.0\n",
+       "2     25.0   189.0    85.0    0.0\n",
+       "3     23.0   178.0    67.0    0.0\n",
+       "4     27.0   178.0    67.0    0.0\n",
+       "...    ...     ...     ...    ...\n",
+       "2463  27.0   218.0   115.0    1.0\n",
+       "2464  30.0   218.0   115.0    0.0\n",
+       "2465  20.0   201.0   100.0    1.0\n",
+       "2466  28.0   201.0   100.0    0.0\n",
+       "2467  23.0   202.0    98.0    0.0\n",
+       "\n",
+       "[2461 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gymnastics_MF = summer_data[(summer_data[\"Sport\"] == 'Basketball') & (summer_data[\"Sex\"] == \"M\")]\n",
+    "Gymnastics_MF = Gymnastics_MF[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
+    "Gymnastics_MF = Gymnastics_MF.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "Gymnastics_MF = Gymnastics_MF.replace(\"Gold\", 1)\n",
+    "Gymnastics_MF = Gymnastics_MF.replace(\"Silver\", 1)\n",
+    "Gymnastics_MF = Gymnastics_MF.replace(\"Bronze\", 1)\n",
+    "Gymnastics_MF[\"Medal\"] = Gymnastics_MF[\"Medal\"].fillna(0)\n",
+    "Gymnastics_MF = Gymnastics_MF.dropna()\n",
+    "Gymnastics_MF[\"Medal\"].unique()\n",
+    "Gymnastics_MF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0.0\n",
+       "1       0.0\n",
+       "2       0.0\n",
+       "3       0.0\n",
+       "4       0.0\n",
+       "       ... \n",
+       "2463    1.0\n",
+       "2464    0.0\n",
+       "2465    1.0\n",
+       "2466    0.0\n",
+       "2467    0.0\n",
+       "Name: Medal, Length: 2461, dtype: float64"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gymnastics_MF[\"Medal\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basketball\n",
+      "Testing Data Score: 0.6818181818181818\n",
+      "----------------------------------------------------\n",
+      "Judo\n",
+      "Testing Data Score: 0.8178752107925801\n",
+      "----------------------------------------------------\n",
+      "Football\n",
+      "Testing Data Score: 0.7028901734104046\n",
+      "----------------------------------------------------\n",
+      "Tug-Of-War\n",
+      "Testing Data Score: 0.4\n",
+      "----------------------------------------------------\n",
+      "Athletics\n",
+      "Testing Data Score: 0.8582647718773373\n",
+      "----------------------------------------------------\n",
+      "Swimming\n",
+      "Testing Data Score: 0.8647810925997675\n",
+      "----------------------------------------------------\n",
+      "Badminton\n",
+      "Testing Data Score: 0.8522727272727273\n",
+      "----------------------------------------------------\n",
+      "Sailing\n",
+      "Testing Data Score: 0.8306613226452906\n",
+      "----------------------------------------------------\n",
+      "Gymnastics\n",
+      "Testing Data Score: 0.9345549738219895\n",
+      "----------------------------------------------------\n",
+      "Art Competitions\n",
+      "Testing Data Score: 1.0\n",
+      "----------------------------------------------------\n",
+      "Handball\n",
+      "Testing Data Score: 0.6797642436149313\n",
+      "----------------------------------------------------\n",
+      "Weightlifting\n",
+      "Testing Data Score: 0.8012718600953895\n",
+      "----------------------------------------------------\n",
+      "Wrestling\n",
+      "Testing Data Score: 0.7592137592137592\n",
+      "----------------------------------------------------\n",
+      "Water Polo\n",
+      "Testing Data Score: 0.6881720430107527\n",
+      "----------------------------------------------------\n",
+      "Hockey\n",
+      "Testing Data Score: 0.6662030598052852\n",
+      "----------------------------------------------------\n",
+      "Rowing\n",
+      "Testing Data Score: 0.6887791107974595\n",
+      "----------------------------------------------------\n",
+      "Fencing\n",
+      "Testing Data Score: 0.799328295549958\n",
+      "----------------------------------------------------\n",
+      "Equestrianism\n",
+      "Testing Data Score: 0.8364705882352941\n",
+      "----------------------------------------------------\n",
+      "Shooting\n",
+      "Testing Data Score: 0.90421729807005\n",
+      "----------------------------------------------------\n",
+      "Boxing\n",
+      "Testing Data Score: 0.8169144981412639\n",
+      "----------------------------------------------------\n",
+      "Taekwondo\n",
+      "Testing Data Score: 0.7662337662337663\n",
+      "----------------------------------------------------\n",
+      "Cycling\n",
+      "Testing Data Score: 0.8627329192546583\n",
+      "----------------------------------------------------\n",
+      "Diving\n",
+      "Testing Data Score: 0.8352490421455939\n",
+      "----------------------------------------------------\n",
+      "Canoeing\n",
+      "Testing Data Score: 0.7846441947565543\n",
+      "----------------------------------------------------\n",
+      "Tennis\n",
+      "Testing Data Score: 0.8735632183908046\n",
+      "----------------------------------------------------\n",
+      "Modern Pentathlon\n",
+      "Testing Data Score: 0.8686131386861314\n",
+      "----------------------------------------------------\n",
+      "Golf\n",
+      "Testing Data Score: 0.9285714285714286\n",
+      "----------------------------------------------------\n",
+      "Softball\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Archery\n",
+      "Testing Data Score: 0.856\n",
+      "----------------------------------------------------\n",
+      "Volleyball\n",
+      "Testing Data Score: 0.6210762331838565\n",
+      "----------------------------------------------------\n",
+      "Synchronized Swimming\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Table Tennis\n",
+      "Testing Data Score: 0.8836206896551724\n",
+      "----------------------------------------------------\n",
+      "Baseball\n",
+      "Testing Data Score: 0.5943396226415094\n",
+      "----------------------------------------------------\n",
+      "Rhythmic Gymnastics\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Rugby Sevens\n",
+      "Testing Data Score: 0.6842105263157895\n",
+      "----------------------------------------------------\n",
+      "Trampolining\n",
+      "Testing Data Score: 0.7894736842105263\n",
+      "----------------------------------------------------\n",
+      "Beach Volleyball\n",
+      "Testing Data Score: 0.9130434782608695\n",
+      "----------------------------------------------------\n",
+      "Triathlon\n",
+      "Testing Data Score: 0.9104477611940298\n",
+      "----------------------------------------------------\n",
+      "Rugby\n",
+      "Testing Data Score: 1.0\n",
+      "----------------------------------------------------\n",
+      "Lacrosse\n",
+      "Testing Data Score: 1.0\n",
+      "----------------------------------------------------\n",
+      "Polo\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Cricket\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Ice Hockey\n",
+      "Testing Data Score: 1.0\n",
+      "----------------------------------------------------\n",
+      "Racquets\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Motorboating\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Croquet\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Figure Skating\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Jeu De Paume\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Roque\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Basque Pelota\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Alpinism\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n",
+      "Aeronautics\n",
+      "An exception occurred\n",
+      "----------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in list:\n",
+    "    try:\n",
+    "        Gymnastics_MF = summer_data[(summer_data[\"Sport\"] == f'{a}') & (summer_data[\"Sex\"] == \"M\")]\n",
+    "        Gymnastics_MF = Gymnastics_MF[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
+    "        Gymnastics_MF = Gymnastics_MF.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        Gymnastics_MF = Gymnastics_MF.replace(\"Gold\", 1)\n",
+    "        Gymnastics_MF = Gymnastics_MF.replace(\"Silver\", 1)\n",
+    "        Gymnastics_MF = Gymnastics_MF.replace(\"Bronze\", 1)\n",
+    "        Gymnastics_MF[\"Medal\"] = Gymnastics_MF[\"Medal\"].fillna(0)\n",
+    "        Gymnastics_MF = Gymnastics_MF.dropna()\n",
+    "        Gymnastics_MF[\"Medal\"].unique()\n",
+    "\n",
+    "        print(a)\n",
+    "        \n",
+    "        \n",
+    "        target = Gymnastics_MF[\"Medal\"]\n",
+    "        target_names = [\"Medals\", \"None\"]\n",
+    "        data = Gymnastics_MF.drop(\"Medal\", axis=1)\n",
+    "        feature_names = data.columns\n",
+    "        data.head()\n",
+    "\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(data, target, random_state=42)\n",
+    "        clf = tree.DecisionTreeClassifier()\n",
+    "        clf = clf.fit(X_train, y_train)\n",
+    "        clf.score(X_test, y_test)\n",
+    "\n",
+    "        rf = RandomForestClassifier(n_estimators=200)\n",
+    "        rf = rf.fit(X_train, y_train)\n",
+    "        print(\"Testing Data Score:\", rf.score(X_test, y_test))\n",
+    "        sorted(zip(rf.feature_importances_, feature_names), reverse=True)\n",
+    "        print(\"----------------------------------------------------\")\n",
+    "    except:\n",
+    "        print(\"An exception occurred\")\n",
+    "        print(\"----------------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
